more on exploring and complete spark part

--- a/DataExploring/TAIFEX/Options.ipynb
+++ b/DataExploring/TAIFEX/Options.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "'https://www.taifex.com.tw/file/taifex/Dailydownload/OptionsDailydownloadCSV/OptionsDaily_2021_12_15.zip'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "' 成交日期,          商品代號,        履約價格,                                                      到期月份(週別),        買賣權別,      成交時間,          成交價格,         成交數量(B or S),     開盤集合競價 '"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "      <th>date</th>\n",
        "      <th>contract</th>\n",
        "      <th>strike_price</th>\n",
-       "      <th>expiration</th>\n",
+       "      <th>expire</th>\n",
        "      <th>type</th>\n",
        "      <th>time</th>\n",
        "      <th>price</th>\n",
@@ -119,15 +119,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>---------- ---- ------- ---- -----------------...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>20211215</td>\n",
+       "      <td>CCO</td>\n",
+       "      <td>55                                        ...</td>\n",
+       "      <td>202112</td>\n",
+       "      <td>P</td>\n",
+       "      <td>095303</td>\n",
+       "      <td>.01</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -145,11 +145,11 @@
        "      <th>2</th>\n",
        "      <td>20211215</td>\n",
        "      <td>CCO</td>\n",
-       "      <td>55                                        ...</td>\n",
-       "      <td>202112</td>\n",
-       "      <td>P</td>\n",
-       "      <td>095303</td>\n",
-       "      <td>.01</td>\n",
+       "      <td>60                                        ...</td>\n",
+       "      <td>202201</td>\n",
+       "      <td>C</td>\n",
+       "      <td>125829</td>\n",
+       "      <td>3.69</td>\n",
        "      <td>1</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -169,11 +169,11 @@
        "      <th>4</th>\n",
        "      <td>20211215</td>\n",
        "      <td>CCO</td>\n",
-       "      <td>60                                        ...</td>\n",
-       "      <td>202201</td>\n",
+       "      <td>62.5                                      ...</td>\n",
+       "      <td>202112</td>\n",
        "      <td>C</td>\n",
-       "      <td>125829</td>\n",
-       "      <td>3.69</td>\n",
+       "      <td>115835</td>\n",
+       "      <td>.54</td>\n",
        "      <td>1</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -188,6 +188,18 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>626683</th>\n",
+       "      <td>20211215</td>\n",
+       "      <td>TXO</td>\n",
+       "      <td>21800                                     ...</td>\n",
+       "      <td>202203</td>\n",
+       "      <td>C</td>\n",
+       "      <td>134125</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>626684</th>\n",
@@ -208,9 +220,9 @@
        "      <td>21800                                     ...</td>\n",
        "      <td>202203</td>\n",
        "      <td>C</td>\n",
-       "      <td>134125</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>134201</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>3</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -227,18 +239,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>626687</th>\n",
-       "      <td>20211215</td>\n",
-       "      <td>TXO</td>\n",
-       "      <td>21800                                     ...</td>\n",
-       "      <td>202203</td>\n",
-       "      <td>C</td>\n",
-       "      <td>134201</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>3</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>626688</th>\n",
        "      <td></td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -251,62 +251,62 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>626689 rows × 9 columns</p>\n",
+       "<p>626688 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                     date      contract  \\\n",
-       "0       ---------- ---- ------- ---- -----------------...          None   \n",
-       "1                                             20211215         CCO        \n",
-       "2                                             20211215         CCO        \n",
-       "3                                             20211215         CCO        \n",
-       "4                                             20211215         CCO        \n",
-       "...                                                   ...           ...   \n",
-       "626684                                        20211215         TXO        \n",
-       "626685                                        20211215         TXO        \n",
-       "626686                                        20211215         TXO        \n",
-       "626687                                        20211215         TXO        \n",
-       "626688                                                             None   \n",
+       "               date      contract  \\\n",
+       "0       20211215         CCO        \n",
+       "1       20211215         CCO        \n",
+       "2       20211215         CCO        \n",
+       "3       20211215         CCO        \n",
+       "4       20211215         CCO        \n",
+       "...             ...           ...   \n",
+       "626683  20211215         TXO        \n",
+       "626684  20211215         TXO        \n",
+       "626685  20211215         TXO        \n",
+       "626686  20211215         TXO        \n",
+       "626687                       None   \n",
        "\n",
-       "                                             strike_price    expiration  \\\n",
-       "0                                                    None          None   \n",
+       "                                             strike_price        expire  \\\n",
+       "0           55                                        ...      202112     \n",
        "1           55                                        ...      202112     \n",
-       "2           55                                        ...      202112     \n",
+       "2           60                                        ...      202201     \n",
        "3           60                                        ...      202201     \n",
-       "4           60                                        ...      202201     \n",
+       "4           62.5                                      ...      202112     \n",
        "...                                                   ...           ...   \n",
+       "626683      21800                                     ...      202203     \n",
        "626684      21800                                     ...      202203     \n",
        "626685      21800                                     ...      202203     \n",
        "626686      21800                                     ...      202203     \n",
-       "626687      21800                                     ...      202203     \n",
-       "626688                                               None          None   \n",
+       "626687                                               None          None   \n",
        "\n",
        "              type          time          price volume is_open_auction  \n",
-       "0             None          None           None   None            None  \n",
+       "0           P           095303        .01            1                  \n",
        "1           P           095303        .01            1                  \n",
-       "2           P           095303        .01            1                  \n",
+       "2           C           125829        3.69           1                  \n",
        "3           C           125829        3.69           1                  \n",
-       "4           C           125829        3.69           1                  \n",
+       "4           C           115835        .54            1                  \n",
        "...            ...           ...            ...    ...             ...  \n",
+       "626683      C           134125        4              1                  \n",
        "626684      C           134125        4              1                  \n",
-       "626685      C           134125        4              1                  \n",
+       "626685      C           134201        3.4            3                  \n",
        "626686      C           134201        3.4            3                  \n",
-       "626687      C           134201        3.4            3                  \n",
-       "626688        None          None           None   None            None  \n",
+       "626687        None          None           None   None            None  \n",
        "\n",
-       "[626689 rows x 9 columns]"
+       "[626688 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr_2d = [x.split(',') for x in arr[1:]]\n",
+    "arr_2d = [x.split(',') for x in arr[2:]]\n",
     "\n",
     "df = pd.DataFrame(arr_2d)\n",
-    "df.columns = ['date', 'contract', 'strike_price', 'expiration', 'type', 'time', 'price', 'volume', 'is_open_auction']\n",
+    "df.columns = ['date', 'contract', 'strike_price', 'expire', 'type', 'time', 'price', 'volume', 'is_open_auction']\n",
     "df"
    ]
   },
@@ -813,7 +813,7 @@
     }
    ],
    "source": [
-    "df = df[['datetime', 'contract', 'expiration', 'strike_price', 'type', 'price', 'volume']]\n",
+    "df = df[['datetime', 'contract', 'expire', 'strike_price', 'type', 'price', 'volume']]\n",
     "df"
    ]
   },
