--- a/DataExploring/TWSE/TAIEX.ipynb
+++ b/DataExploring/TWSE/TAIEX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "'https://www.twse.com.tw/exchangeReport/MI_5MINS_INDEX?response=csv&date=20211215'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,11 +37,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "res = urllib.request.urlopen(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<http.client.HTTPResponse at 0x240986b7ee0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
    ]
   },
   {
@@ -95,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -119,101 +139,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>index</th>\n",
        "      <th>datetime</th>\n",
+       "      <th>index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>09:00:00</td>\n",
-       "      <td>17,599.37</td>\n",
        "      <td>2021-12-15 09:00:00</td>\n",
+       "      <td>17,599.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>09:00:05</td>\n",
-       "      <td>17,592.87</td>\n",
        "      <td>2021-12-15 09:00:05</td>\n",
+       "      <td>17,592.87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>09:00:10</td>\n",
-       "      <td>17,585.06</td>\n",
        "      <td>2021-12-15 09:00:10</td>\n",
+       "      <td>17,585.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>09:00:15</td>\n",
-       "      <td>17,595.84</td>\n",
        "      <td>2021-12-15 09:00:15</td>\n",
+       "      <td>17,595.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>09:00:20</td>\n",
-       "      <td>17,583.76</td>\n",
        "      <td>2021-12-15 09:00:20</td>\n",
+       "      <td>17,583.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3236</th>\n",
-       "      <td>13:29:40</td>\n",
-       "      <td>17,631.21</td>\n",
        "      <td>2021-12-15 13:29:40</td>\n",
+       "      <td>17,631.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3237</th>\n",
-       "      <td>13:29:45</td>\n",
-       "      <td>17,631.21</td>\n",
        "      <td>2021-12-15 13:29:45</td>\n",
+       "      <td>17,631.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3238</th>\n",
-       "      <td>13:29:50</td>\n",
-       "      <td>17,631.21</td>\n",
        "      <td>2021-12-15 13:29:50</td>\n",
+       "      <td>17,631.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3239</th>\n",
-       "      <td>13:29:55</td>\n",
-       "      <td>17,631.21</td>\n",
        "      <td>2021-12-15 13:29:55</td>\n",
+       "      <td>17,631.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3240</th>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>17,660.10</td>\n",
        "      <td>2021-12-15 13:30:00</td>\n",
+       "      <td>17,660.10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3241 rows × 3 columns</p>\n",
+       "<p>3241 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          time      index            datetime\n",
-       "0     09:00:00  17,599.37 2021-12-15 09:00:00\n",
-       "1     09:00:05  17,592.87 2021-12-15 09:00:05\n",
-       "2     09:00:10  17,585.06 2021-12-15 09:00:10\n",
-       "3     09:00:15  17,595.84 2021-12-15 09:00:15\n",
-       "4     09:00:20  17,583.76 2021-12-15 09:00:20\n",
-       "...        ...        ...                 ...\n",
-       "3236  13:29:40  17,631.21 2021-12-15 13:29:40\n",
-       "3237  13:29:45  17,631.21 2021-12-15 13:29:45\n",
-       "3238  13:29:50  17,631.21 2021-12-15 13:29:50\n",
-       "3239  13:29:55  17,631.21 2021-12-15 13:29:55\n",
-       "3240  13:30:00  17,660.10 2021-12-15 13:30:00\n",
+       "                datetime      index\n",
+       "0    2021-12-15 09:00:00  17,599.37\n",
+       "1    2021-12-15 09:00:05  17,592.87\n",
+       "2    2021-12-15 09:00:10  17,585.06\n",
+       "3    2021-12-15 09:00:15  17,595.84\n",
+       "4    2021-12-15 09:00:20  17,583.76\n",
+       "...                  ...        ...\n",
+       "3236 2021-12-15 13:29:40  17,631.21\n",
+       "3237 2021-12-15 13:29:45  17,631.21\n",
+       "3238 2021-12-15 13:29:50  17,631.21\n",
+       "3239 2021-12-15 13:29:55  17,631.21\n",
+       "3240 2021-12-15 13:30:00  17,660.10\n",
        "\n",
-       "[3241 rows x 3 columns]"
+       "[3241 rows x 2 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +239,7 @@
     "ds = date.strftime('%Y-%m-%d ')\n",
     "df['datetime'] = pd.to_datetime(ds + df['time'])\n",
     "\n",
-    "df"
+    "df[['datetime', 'index']]"
    ]
   },
   {
