finished write-up

--- a/DataExploring/FinMind/006204.ipynb
+++ b/DataExploring/FinMind/006204.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import configparser\n",
     "import datetime\n",
     "import urllib.request\n",
     "import json\n",
@@ -14,14 +13,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FinMind\n",
+    "The data of an ETF that tracking `TAIEX` is collected from a remarkable project call **FinMind**, a free and generous data source.\n",
+    "\n",
+    "check:  \n",
+    "+ [Website](https://finmindtrade.com/)  \n",
+    "+ [Github](https://github.com/FinMind/FinMind)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = configparser.ConfigParser()\n",
-    "config.read('finmind.cfg')\n",
-    "\n",
     "ds = datetime.date(2021, 9, 22)\n",
     "\n",
     "url = \"https://api.finmindtrade.com/api/v4/data\"\n",
@@ -30,36 +38,56 @@
     "    'dataset': 'TaiwanStockPriceTick',\n",
     "    'data_id': '006204',\n",
     "    'start_date': ds.strftime('%Y-%m-%d'),\n",
-    "    'token': config['finmind']['API_TOKEN'],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://api.finmindtrade.com/api/v4/data?dataset=TaiwanStockPriceTick&data_id=006204&start_date=2021-09-22&token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJkYXRlIjoiMjAyMi0wMy0wMiAxMzoxOToyMSIsInVzZXJfaWQiOiJxazY4MTciLCJpcCI6IjIwMy43Ny40MS4yMjIifQ.DIcy3u2CAOIDRbtsE47JqWqHNa_59R5luKuSXTHbRZU'"
+       "'https://api.finmindtrade.com/api/v4/data?dataset=TaiwanStockPriceTick&data_id=006204&start_date=2021-09-22'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def get_paramed_url(url:str, params:dict[str, str]) -> str:\n",
+    "    \"\"\"\n",
+    "    concat a url with parameters\n",
+    "\n",
+    "    args:\n",
+    "        url - bare url\n",
+    "        params - key-value pairs for parameters\n",
+    "    return:\n",
+    "        parametered url\n",
+    "    \"\"\"\n",
     "    return url + '?{}'.format('&'.join([f'{k}={v}' for k, v in params.items()]))\n",
     "\n",
     "get_paramed_url(url, params)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A simple get http request could do the trick.\n",
+    "\n",
+    "An unregistered connection could request 300 time per hour.  \n",
+    "Fortunately, the usage of this project won't excess it.\n",
+    "\n",
+    "The data comes in json format."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +96,7 @@
        "b'{\"msg\":\"success\",\"status\":200,\"data\":[{\"date\":\"2021-09-22\",\"stock_id\":\"006204\",\"deal_price\":90.1,\"volume\":1,\"Time\":\"09:00:11.161\",\"TickType\":1},{\"date\":\"2021-09-22\",\"stock_id\":\"006204\",\"deal_price\":90.0,\"volume\":10,\"Time\":\"13:20:24.969\",\"TickType\":1},{\"date\":\"2021-09-22\",\"stock_id\":\"006204\",\"deal_price\":90.0,\"volume\":10,\"Time\":\"13:20:26.038\",\"TickType\":1}]}'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +136,7 @@
        "  'TickType': 1}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,8 +149,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "make a pandas dataframe for easy organization and display"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +228,7 @@
        "2  2021-09-22   006204        90.0      10  13:20:26.038         1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,26 +239,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0    2021-09-22\\n1    2021-09-22\\n2    2021-09-22\\nName: date, dtype: object 0    09:00:11.161\\n1    13:20:24.969\\n2    13:20:26.038\\nName: Time, dtype: object'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "merge date and time column, and take selected data"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +310,7 @@
        "2 2021-09-22 13:20:26+08:00   006204   90.0      10"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
