--- a/DataExploring/TWSE/TAIEX.ipynb
+++ b/DataExploring/TWSE/TAIEX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "'https://www.twse.com.tw/exchangeReport/MI_5MINS_INDEX?response=csv&date=20211215'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,85 +37,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = urllib.request.urlopen(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<http.client.HTTPResponse at 0x240986b7ee0>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'text/csv;charset=ms950'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.getheader(name=\"Content-Type\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\"110\\xa6~12\\xa4\\xeb15\\xa4\\xe9\\xa8C5\\xac\\xed\\xab\\xfc\\xbc\\xc6\\xb2\\xce\\xadp\"\\r\\n\"\\xae\\xc9\\xb6\\xa1\",\"\\xb5o\\xa6\\xe6\\xb6q\\xa5[\\xc5v\\xaa\\xd1\\xbb\\xf9\\xab\\xfc\\xbc\\xc6\",\"\\xa5\\xbc\\xa7t\\xaa\\xf7\\xbf\\xc4\\xabO\\xc0I\\xaa\\xd1\\xab\\xfc\\xbc\\xc6\",\"\\xa5\\xbc\\xa7t\\xb9q\\xa4l\\xaa\\xd1\\xab\\xfc\\xbc\\xc6\",\"\\xa5\\xbc\\xa7'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "content = res.read()"
+    "res = urllib.request.urlopen(url)\n",
+    "\n",
+    "content = res.read()\n",
+    "\n",
+    "content[:100] # peeking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data obtained contains redundant lines, and including chinese words."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +174,7 @@
        "[3241 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
